--- a/src/index.html
+++ b/src/index.html
@@ -1,17 +1,69 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My SOLO API </title>
-</head>
-<body>
-    <div class="title"><h1>My Movie Collection</h1></div>
-    <form action="">
-        <input type="text">
-        <button>Click</button>
-    </form>
-    <div class="movieTable"></div>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style.css" />
+    <script src="https://code.iconify.design/1/1.0.7/iconify.min.js"></script>
+    <link
+      rel="stylesheet"
+      href="path/to/font-awesome/css/font-awesome.min.css"
+    />
     
-</body>
+    <title>My SOLO API</title>
+  </head>
+  <body>
+    <div class="title"><h1>🎥 Movie Collection API 🎥</h1></div>
+    <p>
+      <span
+        class="iconify"
+        data-icon="logos-github-icon"
+        data-inline="false"
+      ></span
+      >:
+      <a href="https://github.com/Erismd/Solo-API-Project" target="_blank"
+        >My Github page</a
+      >
+    </p>
+    <i class="fa fa-github" aria-hidden="true"></i>
+    <form target="iframe" method="POST" action="http://localhost:5000/addMovie">
+      <div class="addData">
+        <div class="inputfield">
+          <label for="" id="title">Title : </label>
+          <input type="text" placeholder="title" />
+        </div>
+
+        <div class="inputfield">
+          <label for="" id="director">Director : </label>
+          <input type="text" placeholder="director" />
+        </div>
+        <div class="inputfield">
+          <label for="" id="title">rating : </label>
+          <input type="text" placeholder="Number" />
+        </div>
+
+        <div class="inputfield">
+          <label for="" id="title">reviews: </label>
+          <input type="text" placeholder="write a review" />
+        </div>
+        <!-- <div class="inputfield">
+          <label for="" id="title">Title : </label>
+          <input type="text" placeholder="Add movie" />
+        </div> -->
+      </div>
+    </form>
+      <form
+        target="iframe"
+        method="GET"
+        action="http://localhost:5000/allMovies"
+      >
+        <button>POST</button>
+    
+
+      <div id="allMovies"><button class="getAll">Show List</button></div>
+    </form>
+
+    <div class="movieTable"></div>
+    <script src="createTable.js"></script>
+  </body>
 </html>
